--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ before_install:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16"
   - sleep 3
   - export DISPLAY=:1.0
-  - wget http://downloads.arduino.cc/arduino-1.6.12-linux64.tar.xz
-  - tar xf arduino-1.6.12-linux64.tar.xz
-  - sudo mv arduino-1.6.12 /usr/local/share/arduino
+  - wget http://downloads.arduino.cc/arduino-1.6.13-linux64.tar.xz
+  - tar xf arduino-1.6.13-linux64.tar.xz
+  - sudo mv arduino-1.6.13 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
   - mkdir $HOME/.arduino15
-  - wget http://downloads.arduino.cc/libraries/library_index.json -O $HOME/.arduino15/library_index.json
+#  - wget http://downloads.arduino.cc/libraries/library_index.json -O $HOME/.arduino15/library_index.json
 install:
   - arduino --install-library "WebSockets"
 #  - git clone https://github.com/Links2004/arduinoWebSockets $HOME/Arduino/libraries/WebSockets
